--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -3,6 +3,7 @@
 [/Script/EngineSettings.GameMapsSettings]
 GameDefaultMap=/Game/Blockhead/Maps/Level1.Level1
 EditorStartupMap=/Game/Blockhead/Maps/Level1.Level1
+GlobalDefaultGameMode=/Game/Blockhead/Core/Game/BP_BlockHeadGameMode.BP_BlockHeadGameMode_C
 
 [/Script/WindowsTargetPlatform.WindowsTargetSettings]
 DefaultGraphicsRHI=DefaultGraphicsRHI_DX12
